# ia-tigris

./: .dockerignore  .gitignore  .gitmodules  LICENSE  MIGRATION_SNAPSHOT.md  README.md
.github/workflows/: ci.yml
src/ipp_metrics/: .gitignore  CMakeLists.txt  README.md  package.xml
src/ipp_metrics/config/: gen_plan_request.yaml  gen_search_map.yaml  mc_test_from_plan_request.yaml  mc_test_random.yaml  mc_testing.yaml  mc_testing_scenario1.yaml  mc_testing_search1_param_v29.yaml  mc_testing_search1_random.yaml  mc_testing_search1_random_v10.yaml  mc_testing_search1_random_v11.yaml  mc_testing_search1_random_v12.yaml  mc_testing_search1_random_v13.yaml  mc_testing_search1_random_v14.yaml  mc_testing_search1_random_v20.yaml  mc_testing_search1_random_v21.yaml  mc_testing_search1_random_v22.yaml  mc_testing_search1_random_v27.yaml  mc_testing_search1_random_v33.yaml  mc_testing_search1_random_v9.yaml  mc_testing_track1.yaml  param_sweep1.yaml
src/ipp_metrics/config/mcts_rollout_prediction_paper/: mc_gen_train_data.yaml  mc_gen_train_data_finetune.yaml  mc_testing_5-targets.yaml  mc_testing_andrew_limcts.yaml  mc_testing_andrew_rimcts.yaml  mc_testing_andrew_rpmcts.yaml  mc_testing_brady.yaml  mc_testing_debug.yaml  mc_testing_junbin.yaml  mc_testing_junbin_limcts.yaml  mc_testing_junbin_rimcts.yaml  mc_testing_junbin_rpmcts.yaml  mc_testing_junbin_track.yaml  mc_testing_sagar_greedy.yaml  mc_testing_sagar_random.yaml  mc_testing_scenario1_greedy.yaml  mc_testing_scenario1_limcts.yaml  mc_testing_scenario1_random.yaml  mc_testing_scenario1_rimcts.yaml  mc_testing_scenario1_rpmcts.yaml  mc_testing_siva.yaml  mc_testing_siva_greedy.yaml  mc_testing_siva_limcts.yaml  mc_testing_siva_random.yaml  mc_testing_siva_rimcts.yaml  mc_testing_siva_rpmcts.yaml  visual.yaml
src/ipp_metrics/include/ipp_metrics/: ipp_mc_runs_node.h
src/ipp_metrics/launch/: metrics.launch  sim_mc_runs.launch  simple_sim_metrics.launch
src/ipp_metrics/scripts/: Entropy_Over_Time.ipynb  Odometry_to_kml.ipynb  gen_rand_plan_request.py  gen_rand_search_map.py  generate_shitloads_of_data.bash  ipp-journal-analysis.py  kill_all_nodes.py  m600_ipp_tro_2023-12-15-09-51-46.kml  mc_testing_with_plan_request.py  parameter_sweep.py  parameter_sweep_analysis.py  plot_metrics.py  record_search_metrics.py  record_tracking_metrics.py  test_sweep.py  test_sweep_sigma.py  test_sweep_targets.py
src/ipp_metrics/scripts/cluster_scripts/: notes.md  run_mc_testing.job  run_mc_testing.sh  run_mc_testing_multi.sbatch
src/ipp_metrics/src/: ipp_mc_runs_node.cpp
src/ipp_planners/: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  setup_ws.bash  ws_develop.repos  ws_ian_gimbal.repos  ws_master.repos  ws_production.repos
src/ipp_planners/.github/workflows/: ci-dev.yml  ci-master.yml
src/ipp_planners/Docker/: .dockerignore  README.md  deploy.Dockerfile  dev.Dockerfile  development.Dockerfile  env_noetic.Dockerfile  metrics.Dockerfile  noetic.Dockerfile  ros_entrypoint.sh
src/ipp_planners/config/: webviz_layout.json
src/ipp_planners/config/dsta/: dsta.rviz  planner.yaml  search_map.yaml  tigris.yaml
src/ipp_planners/config/fixed-wing/: README.md  mcts.yaml  mcts_search.yaml  planner.yaml  research.rviz  rviz_publish_view.rviz  tigris.yaml  tracking.yaml
src/ipp_planners/config/isaac_sim/: isaac_sim.rviz  onr.rviz  planner.yaml  planner_track.yaml  search_map.yaml
src/ipp_planners/config/journal/: journal.rviz  planner.yaml  search_map.yaml
src/ipp_planners/config/journal_m600/: README.md  journal_m600.rviz  planner.yaml  search_map.yaml  tigris.yaml
src/ipp_planners/config/logging/: rosconsole_debug.config
src/ipp_planners/config/onr/: onr.rviz  planner.yaml  primtreebnb.yaml  search_map.yaml  tigris.yaml
src/ipp_planners/config/quadrotor/: README.md  journal.rviz  mcts_search.yaml  planner.yaml  search_map.yaml  tigris.yaml
src/ipp_planners/config/research/: planner.yaml  primtree.yaml  primtreebnb.yaml  random.yaml  research.rviz  rpmcts.yaml  search_map.yaml
src/ipp_planners/config/ripacs/: README.md  mcts.yaml  planner.yaml  ripacs.rviz  search_map.yaml
src/ipp_planners/config/rviz_extra/: 3_in_a_line.rviz  airsim.rviz  debug_tigris.rviz  record_icra_gen_train_data_pan.rviz  record_icra_qual_results_compare.rviz  tigris.rviz  tigris_search.rviz  tigris_search_track.rviz
src/ipp_planners/config/tracking/: planner.yaml  tracking.rviz  tracking_roadnet.rviz
src/ipp_planners/launch/: main.launch  main_dual.launch  main_search.launch  main_track.launch  multi_ipp.launch  planner.launch  planner_track.launch  record_bag.launch  search_belief.launch  sim_selector.launch  unit_test.launch
src/ipp_planners/neuralnet/: Analyze Train Data.ipynb  README.md  Trace Model.ipynb  constants.py  dataloading.py  environment.yml  networks.py  train.py
src/ipp_planners/scripts/: analyze.py  build_test_benchmark.sh  planner_simple_waypoint_manager.py  pub_dummy_image_with_pose.py  record_params.py  run_and_save_google_benchmarks.sh  search_benchmarks.sh  search_track_benchmarks.sh  ssh_to_http_repos.bash  tests.sh  track_benchmarks.sh
src/ipp_planners/src/: SearchMap.cpp  Tigris.cpp  ipp_planners_node.cpp  realtime_search_map_node.cpp
src/ipp_planners/srv/: SearchMapSetup.srv  SearchMapUpdate.srv
src/ipp_planners/test/: all_benchmarks.cpp  all_tests.cpp  benchmarks_SearchMap_bounds.cpp  benchmarks_SearchMap_hashmaps.cpp  benchmarks_SearchMap_info_gain.cpp
src/ipp_planners/versions/: v1.1.repos  v1.10.repos  v1.1_jhu.repos  v1.2.2.repos  v1.2.repos  v1.3_jhu.repos  v1.4.2.repos  v1.4.2_jhu.repos  v1.5.repos  v1.5_jhu.repos  v1.6_jhu.repos  v1.9.repos
src/ipp_planners/ws_files/: setup_development.bash
src/simulated_perception/: CMakeLists.txt  README.md  package.xml
src/simulated_perception/config/: simulated_perception.yaml
src/simulated_perception/launch/: simulated_perception.launch
src/simulated_perception/rviz/: simple_mapping.rviz  visualize.rviz
src/simulated_perception/src/: filter.cpp  simulated_perception_node.cpp
(+241 files in other folders)
