<?xml version="1.0"?>
<package format="2">
  <name>metrics</name>
  <version>0.0.0</version>
  <description>The metrics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="brady@todo.todo">Brady</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/metrics</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ipp_planners</build_depend>
  <build_depend>planner_map_interfaces</build_depend>
  <build_depend>ipp_simple_sim</build_depend>
  <build_export_depend>ipp_planners</build_export_depend>
  <build_export_depend>planner_map_interfaces</build_export_depend>
  <build_export_depend>ipp_simple_sim</build_export_depend>
  <exec_depend>ipp_planners</exec_depend>
  <exec_depend>planner_map_interfaces</exec_depend>
  <exec_depend>ipp_simple_sim</exec_depend>
  <exec_depend>trochoids</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
